// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors with bookings should be the same with allBookings 1`] = `
Immutable.List [
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 01",
    "id": 0,
    "roomName": "Demo Room 01",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 02",
    "id": 1,
    "roomName": "Demo Room 02",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 03",
    "id": 2,
    "roomName": "Demo Room 03",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 04",
    "id": 3,
    "roomName": "Demo Room 04",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 05",
    "id": 4,
    "roomName": "Demo Room 05",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Thanksgiving",
    "id": 5,
    "roomName": "Conference Room 1",
    "start": "2017-06-13T11:41:20.000Z",
  },
]
`;

exports[`selectors with bookings should be the same with bookingsByDate 1`] = `
Object {
  "2017-06-13T11:41:20.000Z": Array [
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Test Booking 01",
      "id": 0,
      "roomName": "Demo Room 01",
      "start": "2017-06-13T11:41:20.000Z",
    },
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Test Booking 02",
      "id": 1,
      "roomName": "Demo Room 02",
      "start": "2017-06-13T11:41:20.000Z",
    },
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Test Booking 03",
      "id": 2,
      "roomName": "Demo Room 03",
      "start": "2017-06-13T11:41:20.000Z",
    },
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Test Booking 04",
      "id": 3,
      "roomName": "Demo Room 04",
      "start": "2017-06-13T11:41:20.000Z",
    },
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Test Booking 05",
      "id": 4,
      "roomName": "Demo Room 05",
      "start": "2017-06-13T11:41:20.000Z",
    },
    Object {
      "end": "2017-06-13T11:41:20.000Z",
      "eventName": "Thanksgiving",
      "id": 5,
      "roomName": "Conference Room 1",
      "start": "2017-06-13T11:41:20.000Z",
    },
  ],
}
`;

exports[`selectors with bookings should be the same with currentSearchTerm 1`] = `""`;

exports[`selectors with bookings should be the same with loading 1`] = `true`;

exports[`selectors with bookings should be the same with selectBookings 1`] = `
Immutable.List [
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 01",
    "id": 0,
    "roomName": "Demo Room 01",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 02",
    "id": 1,
    "roomName": "Demo Room 02",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 03",
    "id": 2,
    "roomName": "Demo Room 03",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 04",
    "id": 3,
    "roomName": "Demo Room 04",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Test Booking 05",
    "id": 4,
    "roomName": "Demo Room 05",
    "start": "2017-06-13T11:41:20.000Z",
  },
  Object {
    "end": "2017-06-13T11:41:20.000Z",
    "eventName": "Thanksgiving",
    "id": 5,
    "roomName": "Conference Room 1",
    "start": "2017-06-13T11:41:20.000Z",
  },
]
`;

exports[`selectors with bookings should be the same with useFuzzySearch 1`] = `true`;

exports[`selectors with default states should be the same with allBookings 1`] = `
Immutable.List [
]
`;

exports[`selectors with default states should be the same with bookingsByDate 1`] = `Object {}`;

exports[`selectors with default states should be the same with currentSearchTerm 1`] = `""`;

exports[`selectors with default states should be the same with loading 1`] = `true`;

exports[`selectors with default states should be the same with selectBookings 1`] = `
Immutable.List [
]
`;

exports[`selectors with default states should be the same with useFuzzySearch 1`] = `true`;
